The reason it was not working in iOS was that the margin becomes 0 when the content reaches the width of the wrap, of course. Fixes #6.

--- a/tinymce.focus.css
+++ b/tinymce.focus.css
@@ -1,4 +1,8 @@
-html:not( .ios ) body {
+html {
+	padding: 5%;
+}
+
+body {
 	margin-left: auto;
 	margin-right: auto;
 }
